# gradient-descent

./: GradientDescent.py  README.md  example.py  pyproject.toml
torch_examples/: gradient_descent.py  jacobians.py  model.py
